<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/songs_recognition_galaxy"
    tools:context="com.e.w_audio_player.RecognizeSongsActivity">



    <TextView
        android:id="@+id/volume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="406dp"
        android:layout_marginLeft="406dp"
        android:layout_marginBottom="500dp"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="406dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/auto_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <TextView
        android:id="@+id/auto_switch_label"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginBottom="16dp"
        android:text="@string/auto_switch_label"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/auto_switch"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="16dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/auto_switch_open"
        android:textOn="@string/auto_switch_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"

        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="@color/recordColor"
        android:text="@string/start"
        android:textColor="@color/tabTextForeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="72dp"
        android:background="@color/recordColor"
        android:text="@string/cancel"
        android:textColor="@color/tabTextForeColor"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/request_radio_meta"
        android:visibility="gone"
        android:background="@null"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="8dp"
        android:text="@string/request_radio_meta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="52dp"
        android:visibility="invisible"
        android:shadowColor="#E53935"
        android:text="@string/recognizing"
        android:textColor="#CA4444"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="396dp"
        android:layout_height="248dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="songsClick"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/audio_icon"
            android:layout_width="212dp"
            android:layout_height="94dp"
            android:layout_weight="1"
            android:clickable="false"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/music_image" />

        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songTitle_tview"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:clickable="false"
                android:text="Title: "
                android:textColor="@color/tabTextSelectedColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/songArtitst_tview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/result_artist_view"
                android:textColor="@color/tabTextForeColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/result_release_tview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Release date:"
                android:textColor="@color/tabTextForeColor"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status_connection"
        android:layout_width="403dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="316dp"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/tabTextSelectedColor"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
